[project]
name = "pyunit-evaluate"
version = "2025.05.26"
description = "一些关于机器学习的评价指标"
maintainers = [{ name = "张伟", email = "jtyoui@qq.com" }]

keywords = ["机器学习", "评价指标"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy"]

[project.urls]
Repository = "https://github.com/pyunits/pyunit_evaluate.git"

[dependency-groups]
dev = ["pytest"]
